--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p>Made for Deadcetera | Data from Archive.org • Stem separation by Moises.ai</p>
     </footer>
 
-    <script src="workflow-data.js"></script>
-    <script src="workflow-app.js"></script>
+    <script src="data.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
