Added selection clarity

--- a/index.html
+++ b/index.html
@@ -64,13 +64,33 @@
                     </button>
                 </div>
                 <div class="workflow-guide">
-                    <h3>Quick Workflow:</h3>
-                    <ol>
-                        <li>Click "Download MP3" → Save to your computer</li>
-                        <li>Click "Open Moises.ai Studio" → Upload the MP3</li>
-                        <li>Choose "5 Stems" or "6 Stems" separation</li>
-                        <li>Solo your instrument to practice!</li>
-                    </ol>
+                    <h3>📋 Your Practice Workflow:</h3>
+                    <div style="background: #f7fafc; padding: 15px; border-radius: 8px; margin-top: 10px;">
+                        <div style="margin-bottom: 10px; padding: 10px; background: white; border-radius: 6px; border-left: 4px solid #48bb78;">
+                            <strong>✅ STEP 1: Download MP3</strong>
+                            <p style="margin: 5px 0 0 0; color: #4a5568; font-size: 0.9em;">
+                                Click "Download MP3" button above → Find the file on Archive.org → Right-click → Save to Downloads
+                            </p>
+                        </div>
+                        <div style="margin-bottom: 10px; padding: 10px; background: white; border-radius: 6px; border-left: 4px solid #4299e1;">
+                            <strong>⬆️ STEP 2: Upload to Moises</strong>
+                            <p style="margin: 5px 0 0 0; color: #4a5568; font-size: 0.9em;">
+                                Click "Open Moises.ai Studio" → Click Upload → Select your downloaded MP3
+                            </p>
+                        </div>
+                        <div style="margin-bottom: 10px; padding: 10px; background: white; border-radius: 6px; border-left: 4px solid #ed8936;">
+                            <strong>⚙️ STEP 3: Separate Stems</strong>
+                            <p style="margin: 5px 0 0 0; color: #4a5568; font-size: 0.9em;">
+                                Choose "6 Stems" separation → Wait 1-2 minutes for AI processing
+                            </p>
+                        </div>
+                        <div style="padding: 10px; background: white; border-radius: 6px; border-left: 4px solid #667eea;">
+                            <strong>🎸 STEP 4: Solo Your Part</strong>
+                            <p style="margin: 5px 0 0 0; color: #4a5568; font-size: 0.9em;">
+                                Click "Solo" on your instrument → Adjust tempo → Loop sections → Practice!
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
