Add Phish Widespread and FM setlist

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <button class="primary-btn moises-btn" id="moisesBtn">
                         🎛️ Open Moises.ai Studio
                     </button>
+                    <button class="primary-btn" id="setlistBtn" style="background: #48bb78;">
+                        📋 View Setlist (Song Order & Timing)
+                    </button>
                 </div>
                 <div class="workflow-guide">
                     <h3>📋 Your Practice Workflow:</h3>
