Added buttons fo Phish and Panic

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <button class="filter-btn active" data-filter="all">All Songs</button>
                 <button class="filter-btn" data-filter="GD">Grateful Dead</button>
                 <button class="filter-btn" data-filter="JGB">Jerry Garcia Band</button>
+                <button class="filter-btn" data-filter="WSP">Widespread Panic</button>
+                <button class="filter-btn" data-filter="Phish">Phish</button>
             </div>
             <div class="song-dropdown" id="songDropdown">
                 <!-- Songs populated here -->
