Update circles for steps in Index and fix Song download

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- Step 1: Song Selection -->
         <div class="step-card" id="step1">
-            <div class="step-number">Step 1</div>
+            <div class="step-number">1</div>
             <h2>Choose Your Song</h2>
             <div class="search-box">
                 <input 
@@ -41,7 +41,7 @@
 
         <!-- Step 2: Version Selection (hidden until song selected) -->
         <div class="step-card hidden" id="step2">
-            <div class="step-number">Step 2</div>
+            <div class="step-number">2</div>
             <h2>Top 5 Live Versions</h2>
             <p class="step-description">Based on community rankings and sound quality</p>
             <div id="versionsContainer">
@@ -51,7 +51,7 @@
 
         <!-- Step 3: Download (hidden until version selected) -->
         <div class="step-card hidden" id="step3">
-            <div class="step-number">Step 3</div>
+            <div class="step-number">3</div>
             <h2>Download & Upload to Moises</h2>
             <div class="download-card">
                 <div class="selected-info" id="selectedInfo">
@@ -119,7 +119,7 @@
 
         <!-- Step 4: Part Selection Guide -->
         <div class="step-card hidden" id="step4">
-            <div class="step-number">Step 4</div>
+            <div class="step-number">4</div>
             <h2>Isolate Your Part in Moises</h2>
             <div class="parts-grid">
                 <div class="part-card">
