Fix band names and URLs

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
                 <div class="modal-body">
                     <p id="addResourceInstructions"></p>
                     <input type="text" id="resourceUrlInput" class="search-input" placeholder="Paste URL here...">
+                    <div id="urlPreviewContainer"></div>
                     <div style="display: flex; gap: 10px; margin-top: 15px; justify-content: flex-end;">
                         <button class="secondary-btn" onclick="closeAddResourceModal()">Cancel</button>
                         <button class="primary-btn" onclick="saveResource()">Save</button>
