Pre-filter harmonies

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h3>🎵 Reference Version (Band Voted)</h3>
             <p style="color: #6b7280; font-size: 0.9em;">
                 Vote on which Spotify version to learn
-                <a href="#" onclick="searchSpotify(); return false;" style="color: #667eea; margin-left: 15px; text-decoration: underline;">🔍 Search Spotify</a>
+                <button onclick="searchSpotify()" style="background: none; border: none; color: #667eea; text-decoration: underline; cursor: pointer; font-size: 0.9em; padding: 0; margin-left: 15px;">🔍 Search Spotify</button>
             </p>
         </div>
         
@@ -119,7 +119,7 @@
             <h3>📝 Personal Tab Links</h3>
             <p style="color: #6b7280; font-size: 0.9em;">
                 Each person can add their own Ultimate Guitar tab link
-                <a href="#" onclick="searchUltimateGuitar(); return false;" style="color: #667eea; margin-left: 15px; text-decoration: underline;">🔍 Search Ultimate Guitar</a>
+                <button onclick="searchUltimateGuitar()" style="background: none; border: none; color: #667eea; text-decoration: underline; cursor: pointer; font-size: 0.9em; padding: 0; margin-left: 15px;">🔍 Search Ultimate Guitar</button>
             </p>
         </div>
         
