--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <h1>🎸 Deadcetera Practice Tool</h1>
             <p class="subtitle">Pick a song → Find the best version → Download → Practice your part</p>
             
-            <!-- Google Drive Connection -->
+            <!-- Sign In for Band Collaboration -->
             <div style="text-align: center; margin-top: 15px;">
                 <button id="googleDriveAuthBtn" onclick="handleGoogleDriveAuth()" 
                     style="background: #667eea; color: white; border: none; padding: 10px 20px; border-radius: 8px; font-size: 0.95em; cursor: pointer; font-weight: 600;">
-                    🔗 Connect Google Drive
+                    🔥 Sign In
                 </button>
-                <p style="font-size: 0.85em; color: #6b7280; margin-top: 8px;">Connect to share recordings with your band!</p>
+                <p style="font-size: 0.85em; color: #6b7280; margin-top: 8px;">Sign in to track who's contributing!</p>
             </div>
         </header>
 
@@ -502,7 +502,6 @@
     </footer>
 
     <script src="data.js"></script>
-    <script src="audio-splitter.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
