--- a/test.html
+++ b/test.html
@@ -241,6 +241,7 @@
                     <option value="keys">🎹 Keys/Keyboards</option>
                     <option value="drums">🥁 Drums</option>
                     <option value="vocals">🎤 Vocals</option>
+                    <option value="whole_band">🎶 Whole Band</option>
                 </select>
             </div>
             
