--- a/test.html
+++ b/test.html
@@ -58,6 +58,8 @@
             <button class="menu-item" data-page="equipment" onclick="showPage('equipment')"><span class="menu-icon">🎛️</span> Equipment</button>
             <button class="menu-item" data-page="contacts" onclick="showPage('contacts')"><span class="menu-icon">👥</span> Contacts</button>
             <button class="menu-item" data-page="admin" onclick="showPage('admin')"><span class="menu-icon">⚙️</span> Settings & Admin</button>
+            <div class="menu-divider"></div>
+            <button class="menu-item" data-page="help" onclick="showPage('help')"><span class="menu-icon">❓</span> Help & Guide</button>
         </div>
     </nav>
 
