Final UI tweaks

--- a/test.html
+++ b/test.html
@@ -570,6 +570,7 @@
         <div id="page-equipment" class="app-page hidden"></div>
         <div id="page-contacts" class="app-page hidden"></div>
         <div id="page-admin" class="app-page hidden"></div>
+        <div id="page-help" class="app-page hidden"></div>
     </div>
 
     <footer style="text-align:center;padding:20px;font-size:0.8em;">
