Final Beta Launch

--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
                     <option value="keys">🎹 Keys/Keyboards</option>
                     <option value="drums">🥁 Drums</option>
                     <option value="vocals">🎤 Vocals</option>
+                    <option value="wholeBand">🎶 Whole Band</option>
                 </select>
             </div>
             
