GUI Fixes - multiple

--- a/test.html
+++ b/test.html
@@ -355,6 +355,7 @@
     </div>
     
     <!-- MULTI-TRACK STUDIO (Audio Snippets) -->
+</div><!-- end step5ref -->
         <!-- Step 3: Version Selection (renumbered from Step 2) -->
         <div class="step-card hidden" id="step3">
             <div class="step-number">3</div>
