--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="step-card" id="step1">
             <div style="display:flex;align-items:center;gap:10px;margin-bottom:12px">
                 <div class="step-number" style="flex-shrink:0">1</div>
-                <h2 style="margin:0;display:inline">Song Library</h2>
+                <h2 style="margin:0;line-height:1.2">Song Library</h2>
                 <span style="color:var(--text-dim,#64748b);font-size:0.8em;margin-left:auto" id="songCount"></span>
             </div>
             <div class="search-box">
