--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
                     <option value="on_deck">📚 On Deck</option>
                 </select>
                 <span title="🎯 This Week = songs you're actively rehearsing this week&#10;✅ Gig Ready = polished and ready to play live&#10;⚠️ Needs Polish = know it but needs work&#10;📚 On Deck = learning, not yet rehearsed" style="cursor:help;color:var(--text-dim,#64748b);font-size:0.9em;margin-left:-4px">ⓘ</span>
-                <label style="display:flex;align-items:center;gap:5px;cursor:pointer;font-size:0.82em;color:var(--text-muted,#94a3b8);padding:6px 10px;border:1px solid var(--border,rgba(255,255,255,0.08));border-radius:8px;background:rgba(255,255,255,0.04)" title="Show only songs that have documented vocal harmony parts for the band to practice together">
+                <label style="display:flex;align-items:center;gap:5px;cursor:pointer;font-size:0.85em;font-weight:600;color:var(--text-muted,#94a3b8);padding:7px 10px;border:1px solid var(--border,rgba(255,255,255,0.08));border-radius:8px;background:rgba(255,255,255,0.04);min-width:140px" title="Show only songs that have documented vocal harmony parts for the band to practice together">
                     <input type="checkbox" id="harmoniesOnlyFilter" onchange="filterSongsSync(this.checked?'harmonies':'all')" style="accent-color:var(--accent,#667eea);width:14px;height:14px">
-                    🎤 Harmonies <span title="Filter to show only songs with documented multi-part vocal harmonies" style="cursor:help;color:var(--text-dim,#64748b);font-size:0.85em">ⓘ</span>
+                    🎤 Harmonies
                 </label>
+                <span title="Filter to show only songs with documented multi-part vocal harmonies" style="cursor:help;color:var(--text-dim,#64748b);font-size:0.9em;margin-left:-4px">ⓘ</span>
             </div>
             
             <div class="song-dropdown" id="songDropdown">
@@ -272,7 +273,7 @@
     <!-- PRACTICE TRACKS -->
     <div class="resource-section" id="practiceTracksSection">
         <div class="section-header">
-            <h3>🎵 Practice Tracks</h3>
+            <h3>🎸 Practice Tracks</h3>
             <p style="color:var(--text-muted,#94a3b8);font-size:0.85em">Add videos — auto-fetches title & thumbnail</p>
         </div>
         <div id="practiceTrackAddForm" style="background:rgba(255,255,255,0.03);padding:16px;border-radius:10px;margin-bottom:16px;border:1px solid var(--border,rgba(255,255,255,0.08))">
@@ -306,7 +307,7 @@
     <!-- HARMONIES -->
     <div class="resource-section" id="harmoniesSection">
         <div class="section-header">
-            <h3>🎶 Harmony Parts</h3>
+            <h3>🎤 Harmony Parts</h3>
             <p style="color:var(--text-muted,#94a3b8);font-size:0.85em">Who sings what, when</p>
         </div>
         <div id="harmoniesContainer"></div>
